# HumaSkill

./: .gitignore  ACCEPTANCE_CHECKLIST.md  AGENT_ASSIGNMENTS.md  DEVELOPMENT_ORDER.md  Documentation.md  Herprompt2.md  INTERFACES.md  Implement.md  PROJECT_PLAN.md  Plan.md  Prompt.md  README.md  TASKS.md  TEST_PLAN.md  index.html  pyproject.toml  requirements.txt
Hermes_prompt/: Herprompt.md  Herprompt2.md  prompt2.md
agent_prompts/: 01_skeleton_prompt.md  02_skills_registry_prompt.md  03_composer_prompt.md  04_transition_prompt.md  05_backend_executor_prompt.md  06_main_readme_testfix_prompt.md  07_codex_app_final_review_prompt.md  08_codex_app_section2_work.md  09_Task 08A.md  10_Task09.md  10_Task10_review.md  11_Task11.md  12_Task9B.md
configs/: default_config.yaml  harness.yaml  robot_g1_mujoco.yaml  robot_g1_textop_mujoco.yaml  skills.yaml  transitions.yaml
examples/: demo_dance_request.json  demo_raw_sequence.json  demo_repaired_sequence.json
humaskill/: main.py
low_level_execution/: gmt_tracking_runner.py  split_viewer.py  tracker_adapter.py
middle_architecture/: canonical.py  evaluation.py  execution_monitor.py  feature_extraction.py  gmt_motion_adapter.py  harness_orchestrator.py  matcher.py  recovery_manager.py  reference_ops.py  robot_state.py  skill_motion.py  transition_builder.py  transition_planner.py  transition_registry.py
reports/: HumaSkill_group_meeting_report_feishu.md  g1_model_match_report.md
scripts/: compare_registry_vs_skillmotion.py  convert_g1_pkl_to_npy.py  convert_g1_pkl_to_qpos.py  convert_qpos_clips_to_skillmotion.py  (+27 more)
(+144 files in other folders)
